# decipi

./: .gitignore  Cargo.toml  README.md  structure.md
client/: Cargo.toml
client/src/: client.rs  main.rs  queue.rs
evaluator/: Cargo.toml
evaluator/src/: lib.rs  mem_tunable.rs
evaluator/test_wasm/: build.sh  eval.rs  gen.rs  sub_ac.rs  sub_mle.rs  sub_rte.rs  sub_wa.rs
evaluator/testwasm/: Cargo.toml
evaluator/testwasm/src/: eval.rs  gen.rs  sub_ac.rs  sub_attack.rs  sub_mle.rs  sub_rte.rs  sub_tle.rs  sub_wa.rs
net/: Cargo.toml
net/src/: common.rs  connection.rs  file.rs  init.rs  lib.rs  message.rs  network_manager.rs  queue.rs  socket.rs
net/src/connection/: init.rs
