[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
net = {path = "../net", features = ["client"]}
evaluator = {path = "../evaluator"}
argh = "0.1"
keyring = "2"
whoami = "1.4"
tokio = { version = "1.34" }
rand = "0.8"
ed25519-dalek = {version = "2", features = ["pkcs8", "pem", "rand_core"]}
tracing = {version = "0.1", features = ["max_level_debug", "release_max_level_error"]}
tracing-subscriber = "0.3"
scc = "2"

