[package]
name = "net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.34", features = ["full"]} #TODO: replace with only used features
rand = "0.8"
blake3 = "1.5"
ed25519-dalek = "2"
x25519-dalek = {version = "2", features = ["getrandom"]}
speedy = "0.8"
derive_more = "0.99"
chacha20 = "0.9"

